Fixes alignment styling for header and footer contnet

--- a/styles/style.less
+++ b/styles/style.less
@@ -427,6 +427,11 @@ footer {
     }
 }
 
+.sponsor{
+	font-size:.8em;
+	padding-left:8px;
+}
+
 .shunpike-logo {
 	float:right;
 }
