--- a/styles/values.less
+++ b/styles/values.less
@@ -2,4 +2,5 @@
 
 @mobile: ~"all and (max-width: 480px)";
 @tablet: ~"all and (min-width: 624px)";
+@underdesktop: ~"all and (max-width: 799px)";
 @desktop: ~"all and (min-width: 800px)";
